<resources>
    <string name="app_name">Demo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_search">Search</string>
    <string name="my_collections">收藏</string>
    <string name="my_about">关于</string>
    <string name="log_out">退出</string>
    <string name="user_name">Zelda</string>
    <string name="appName">wanAndroid</string>


    <!-- search -->
    <string name="search_hint">搜索文章...</string>
    <string name="search_hot_words">热门搜索</string>
    <string name="search_button">搜索</string>
    <string name="search_hot_words_results">搜索结果</string>

    <!-- login -->
    <string name="login_text_username">username</string>
    <string name="login_text_pwd">password</string>
    <string name="login_sign_in_short">sign in</string>
    <string name="login_button_register">Register</string>
    <string name="login_button_login">Login</string>
    <string name="login_successful_cn">登入成功</string>
    <string name="pls_input_right_username_password_cn">请输入正确的用户名与密码</string>
    <string name="pls_check_password">请检查密码是否对应</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_desc">To vanish a warning[Missing contentDescription attribute on image]</string>

    <!-- Strings related to collection -->
    <string name="collect_toolbarName">Collection</string>

    <!-- Strings related to projects -->
    <string name="projects_toolbar_title">项目</string>


</resources>